Prototype Tappy; Example now has 10 Tappies

--- a/tappy.html
+++ b/tappy.html
@@ -6,7 +6,10 @@
       var targetElems=new Array("img","hr","table","td","div","input","textarea","button","select","ul","ol","li","h1","h2","h3","h4","p","code","object","a","b","strong","span");
       //var twitterAccount = "http://twitter.com/techgyo";
       //var tweetThisText = "Twitter - techGyo http://www.techgyo.com/";
-      tripleflapInit();
+      for(var i=0; i<10; i++){
+        new Tappy("tappy"+i);
+      }
+      /* var tappers1 = new Tappy("one"); */
     </script>
 
     <hr/>
